Fix social link overflow on small screens On small screen sizes (tested with 400% zoom at 1080p), the GitHub social link would overflow off the page. This does not happen anymore.

--- a/styles.less
+++ b/styles.less
@@ -192,4 +192,5 @@ a.highlight {
 	.inactivepage {margin-left: unset;}
 	h1, h2, h3, h4, h5, h6 {text-align: center;}
 	.maincontent {width: unset;}
+	.social-container {flex-wrap: wrap;}
 }
